# voidcat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/voidcat/: __init__.py  __main__.py  ai.py  app.py  controller.py  engine.py  gameplay.py  generator.py  gfx_app.py  gfx_assets.py  help.py  models.py  persistence.py  presentation.py  progression.py  session.py  ui.py
src/voidcat/assets/gfx/: sprites.json
tests/: __init__.py  helpers.py  test_ai.py  test_app.py  test_controller.py  test_engine.py  test_generator.py  test_gfx_app.py  test_persistence.py  test_presentation.py  test_properties.py  test_rules.py  test_session.py  test_smoke.py  test_terminal_app.py  test_ui.py
